@@ -1,3 +1,8 @@
+2002-01-01  Sam Steingold  <sds@gnu.org>
+
+	* init.lisp (sys::remove-old-definitions): CERROR for exported CL
+	symbols even when there is no definition
+
 2001-12-25  Sam Steingold  <sds@gnu.org>
 
 	make DESCRIBE break long lines
